made nav bar sticky so that it moves when you scroll werid issue where the divs overlay the nav bar. Also added graudent to the selection bars, fixed more werid spacing issues

--- a/css/homepage/mainsection.css
+++ b/css/homepage/mainsection.css
@@ -10,18 +10,19 @@
     flex:0;
     outline: solid;
     outline-color: white;
+    background: linear-gradient(rgb(72,219,251),rgb(36,110,125) )
 }
 .mainsectionselectionbars {
      /*style for all the individual items in the list of sorts*/
     font-size: x-large;
     color:black;
-    background-color: rgb(0,153,153);
+    
     border-left-style: solid;
     border-right-style: solid;
     border-top: solid;
     border-bottom:solid;
     border-color: white;
-    
+
     text-align: center;
     width: 225px;
     height: 125px;
